[minor updates] update some files ...

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,1 @@
-export PYTHONPATH=$PYTHONPATH/src/concepts/vector_fundamentals/vector_class
+export PYTHONPATH=$PYTHONPATH/src/concepts/vector_fundamentals/vector_class:$PYTHONPATH/testing/
