--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,27 @@
 [tool.pyright]
-include = ["src"]
+include = ["src", "tests"]
+# exclude = ["**/node_modules",
+#     "**/__pycache__",
+#     "src/experimental",
+#     "src/typestubs"
+# ]
+# ignore = ["src/oldstuff"]
+# defineConstant = { DEBUG = true }
+# stubPath = "src/stubs"
+# venv = "env367"
+#
+# reportMissingImports = true
+# reportMissingTypeStubs = false
+#
+# pythonVersion = "3.6"
+# pythonPlatform = "Linux"
+#
+# executionEnvironments = [
+#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
+#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
+#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
+#   { root = "src" }
+# ]
 
 
+# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-config-file
